src/test/deca/context/invalid/ContextSansObjet/OperationsUnaires/MinusNull.deca
//Description
//  Test unary minus pour un null
//
//Réponse
//  Erreur contextuelle ligne 8
//  type incompatible
{
    -null;
}